--- a/.github/workflows/insightink-CI.yml
+++ b/.github/workflows/insightink-CI.yml
@@ -28,7 +28,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        cd Blog && python manage.py test
 
   build-docker-image:
 
@@ -37,4 +37,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag insightink:$(date +%s)
