--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
 asgiref==3.7.2
+click==8.1.7
+dj-database-url==2.1.0
 Django==4.2.5
 django-froala-editor==4.1.1
 djangorestframework==3.14.0
+gunicorn==21.2.0
+h11==0.14.0
+packaging==23.2
 Pillow==10.0.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
+typing_extensions==4.8.0
+uvicorn==0.23.2
+whitenoise==6.5.0
