changes for render deployment

--- a/.github/workflows/insightink-CI.yml
+++ b/.github/workflows/insightink-CI.yml
@@ -30,11 +30,11 @@ jobs:
       run: |
         cd Blog && python manage.py test
 
-  build-docker-image:
+  # build-docker-image:
 
-    runs-on: ubuntu-latest
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag insightink:$(date +%s)
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - name: Build the Docker image
+  #     run: docker build . --file Dockerfile --tag insightink:$(date +%s)
