--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ djangorestframework==3.14.0
 gunicorn==21.2.0
 h11==0.14.0
 packaging==23.2
-Pillow==10.0.0
+Pillow
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 pytz==2023.3.post1
